--- a/proj.html
+++ b/proj.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Scrolling Nav</title>
+    <title>4.0</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -51,13 +51,13 @@
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about-us">About Us</a>
+                        <a class="page-scroll" href="#about">About us</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#blog">Blog</a>
+                        <a class="page-scroll" href="#services">Blog</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#quotes">Quotes</a>
+                        <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -71,8 +71,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Welcome to 4.0!!</h1>
-                    
+                    <h1>Welcome to Project 4.0</h1>   
                     <a class="btn btn-default page-scroll" href="#about">Click Me to Scroll Down!</a><br>
                     <a href="index.html" class="btn btn-default" id="menu-toggle">Back</a><br>
                     <a href="https://github.com/edos4/edos4.github.io" target="_blank" class="btn btn-default" id="menu-toggle">Source</a>
@@ -81,19 +80,28 @@
         </div>
     </section>
 
-    <!-- About Section -->
-    <section id="about-us" class="about-us">
+    <!-- About us Section -->
+    <section id="about" class="about-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>About Us</h1>
+                    <h1>About us</h1>
                 </div>
             </div>
         </div>
+         <ul>
+            <li><a href="link1.html"><img src="sss.jpg"></a></li>
+        </ul>
+        DOTA (Defense of the Ancients), though an addictive online game, surprisingly presents some advantages that not too many know in a layman’s world.
+
+Yes, it sometimes makes you forget that you have skipped a meal or deprived yourself a good night’s rest. 
+Not to mention the explosion of your anger to an incompetent team-mate resulting to jabs of trash-talking and a series of bullying.
+But the list goes on and on that the disadvantages have somewhat become so overrated. 
+Now is the time to highlight DOTA’s other side of the story.
     </section>
-<img src="jessy.jpg" alt="Jessy" style="width:304px;height:228px;">
+
     <!-- Services Section -->
-    <section id="blog" class="Blogs">
+    <section id="services" class="services-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -101,17 +109,28 @@
                 </div>
             </div>
         </div>
+         <ul>
+            <li><a href="link1.html"><img src="ste.jpg"></a></li>
+        </ul>
+        Wardell Stephen "Steph" Curry was born March 14, 1988 is an American professional basketball player for the Golden State Warriors of the National Basketball Association (NBA). 
+        Many players and analysts have called him the greatest shooter in NBA history.In 2014–15, Curry won the NBA Most Valuable Player Award and led the Warriors to their first championship since 1975.
+        The following season, he became the first player in NBA history to be elected MVP by a unanimous vote and to lead the league in scoring while shooting above 50–40–90. 
+        That same year, the Warriors broke the record for the most wins in an NBA season.
     </section>
 
     <!-- Contact Section -->
-    <section id="quotes" class="quotes">
+    <section id="contact" class="contact-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Quotes</h1>
+                    <h1>Contacts</h1>
                 </div>
             </div>
         </div>
+        <ul>
+            <li><a href="link1.html"><img src="fb.jpg"></a></li>
+        </ul>
+        YOU CAN CONTACT US THROUGH OUR FACEBOOK WHERE YOU CAN INTERACT WITH US.JUST SEARCH 4.0 DOTA 2.
     </section>
 
     <!-- jQuery -->
