--- a/index.html
+++ b/index.html
@@ -1,1 +1,148 @@
-Bayani
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>4.0</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/scrolling-nav.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<!-- The #page-top ID is part of the scrolling feature - the data-spy and data-target are part of the built-in Bootstrap scrollspy function -->
+
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">4.0</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav">
+                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                    <li class="hidden">
+                        <a class="page-scroll" href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#about">About us</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#services">Blog</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <!-- Intro Section -->
+    <section id="intro" class="intro-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Welcome to Project 4.0</h1>   
+                    <a class="btn btn-default page-scroll" href="#about">Click Me to Scroll Down!</a><br>
+                    <a href="index.html" class="btn btn-default" id="menu-toggle">Back</a><br>
+                    <a href="https://github.com/edos4/edos4.github.io" target="_blank" class="btn btn-default" id="menu-toggle">Source</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About us Section -->
+    <section id="about" class="about-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>About us</h1>
+                </div>
+            </div>
+        </div>
+         <ul>
+            <li><a href="link1.html"><img src="sss.jpg"></a></li>
+        </ul>
+        DOTA (Defense of the Ancients), though an addictive online game, surprisingly presents some advantages that not too many know in a layman’s world.
+
+Yes, it sometimes makes you forget that you have skipped a meal or deprived yourself a good night’s rest. 
+Not to mention the explosion of your anger to an incompetent team-mate resulting to jabs of trash-talking and a series of bullying.
+But the list goes on and on that the disadvantages have somewhat become so overrated. 
+Now is the time to highlight DOTA’s other side of the story.
+    </section>
+
+    <!-- Services Section -->
+    <section id="services" class="services-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Blog</h1>
+                </div>
+            </div>
+        </div>
+         <ul>
+            <li><a href="link1.html"><img src="ste.jpg"></a></li>
+        </ul>
+        Wardell Stephen "Steph" Curry was born March 14, 1988 is an American professional basketball player for the Golden State Warriors of the National Basketball Association (NBA). 
+        Many players and analysts have called him the greatest shooter in NBA history.In 2014–15, Curry won the NBA Most Valuable Player Award and led the Warriors to their first championship since 1975.
+        The following season, he became the first player in NBA history to be elected MVP by a unanimous vote and to lead the league in scoring while shooting above 50–40–90. 
+        That same year, the Warriors broke the record for the most wins in an NBA season.
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Contacts</h1>
+                </div>
+            </div>
+        </div>
+        <ul>
+            <li><a href="link1.html"><img src="fb.jpg"></a></li>
+        </ul>
+        YOU CAN CONTACT US THROUGH OUR FACEBOOK WHERE YOU CAN INTERACT WITH US.JUST SEARCH 4.0 DOTA 2.
+    </section>
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Scrolling Nav JavaScript -->
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/scrolling-nav.js"></script>
+
+</body>
+
+</html>
