--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                 </div>
             </div>
         </div>
+        <body bgcolor="AQUA|00FFF|0,255,255">
     </section>
 
     <!-- About us Section -->
@@ -92,12 +93,12 @@
          <ul>
             <li><a href="link1.html"><img src="sss.jpg"></a></li>
         </ul>
-        DOTA (Defense of the Ancients), though an addictive online game, surprisingly presents some advantages that not too many know in a layman’s world.
+        DOTA (Defense of the Ancients), though an addictive online game, surprisingly presents some advantages that not too many know in a laymanâ€™s world.
 
-Yes, it sometimes makes you forget that you have skipped a meal or deprived yourself a good night’s rest. 
+Yes, it sometimes makes you forget that you have skipped a meal or deprived yourself a good nightâ€™s rest. 
 Not to mention the explosion of your anger to an incompetent team-mate resulting to jabs of trash-talking and a series of bullying.
 But the list goes on and on that the disadvantages have somewhat become so overrated. 
-Now is the time to highlight DOTA’s other side of the story.
+Now is the time to highlight DOTAâ€™s other side of the story.
     </section>
 
     <!-- Services Section -->
@@ -113,8 +114,8 @@ Now is the time to highlight DOTA’s other side of the story.
             <li><a href="link1.html"><img src="ste.jpg"></a></li>
         </ul>
         Wardell Stephen "Steph" Curry was born March 14, 1988 is an American professional basketball player for the Golden State Warriors of the National Basketball Association (NBA). 
-        Many players and analysts have called him the greatest shooter in NBA history.In 2014–15, Curry won the NBA Most Valuable Player Award and led the Warriors to their first championship since 1975.
-        The following season, he became the first player in NBA history to be elected MVP by a unanimous vote and to lead the league in scoring while shooting above 50–40–90. 
+        Many players and analysts have called him the greatest shooter in NBA history.In 2014â€“15, Curry won the NBA Most Valuable Player Award and led the Warriors to their first championship since 1975.
+        The following season, he became the first player in NBA history to be elected MVP by a unanimous vote and to lead the league in scoring while shooting above 50â€“40â€“90. 
         That same year, the Warriors broke the record for the most wins in an NBA season.
     </section>
 
