--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Welcome to Project 4.0</h1>   
+                    <h1><h1><FONT FACE="courier">Welcome to Project 4.0</FONT></h1> 
                     <a class="btn btn-default page-scroll" href="#about">Click Me to Scroll Down!</a><br>
                     <a href="index.html" class="btn btn-default" id="menu-toggle">Back</a><br>
                     <a href="https://github.com/edos4/edos4.github.io" target="_blank" class="btn btn-default" id="menu-toggle">Source</a>
